<resources>
	<string name="app_name">LayoutAssignment</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="sign_in">Sign In</string>
	<string name="instagram_logo">instagram logo</string>
	<string name="forget_password"><u>Forget Password?</u></string>
	<string name="dots">…</string>
	<string name="hi">Hi,</string>
	<string name="username_2">Username!</string>
	<string name="login_successfully">Login Successfully.</string>
	<string name="welcome">Welcome.</string>
	<string name="login_screen_plant">login screen plant</string>
	<string name="new_user">New User?</string>
	<string name="sign_up">Sign Up</string>
	<string name="what_kind_of_plant_you_want">What Kind\nOf Plant You Want</string>
	<string name="search">Search</string>
	<string name="small">Small</string>
	<string name="medium">Medium</string>
	<string name="hanging">Hanging</string>
	<string name="all">All</string>
	<string name="add_to_cart">Add to Cart</string>
	<string name="menu">Menu</string>
	<string name="indoor">Indoor</string>
	<string name="plant1">plant1</string>
	<string name="plant_1">Plant 1</string>
	<string name="from_15">From $15</string>
	<string name="details">Details</string>
	<string name="regular_price_195_00">Regular Price $195.00</string>
	<string name="_1">1</string>
	<string name="description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>
	<string name="buy_now">Buy Now</string>
</resources>