<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white">
	<ImageView
		android:layout_height="120sp"
		android:layout_width="180sp"
		android:src="@drawable/instagram_logo"
		android:layout_gravity="center"
		android:layout_marginTop="100sp"
		android:contentDescription="@string/instagram_logo" />
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="100sp"
		android:layout_marginStart="25sp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/hi"
			android:textSize="30sp"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="10sp"
			android:text="@string/username_2"
			android:textSize="30sp"
			android:textStyle="bold"
			/>
	</LinearLayout>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="25sp"
		android:text="@string/login_successfully"
		android:textSize="30sp"/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="25sp"
		android:text="@string/welcome"
		android:textSize="30sp"
		android:layout_marginTop="125sp"
		/>
</LinearLayout>