<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<ImageView
		android:layout_height="120sp"
		android:layout_width="120sp"
		android:src="@drawable/instagram_logo"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="100sp"
		android:contentDescription="@string/instagram_logo"
		android:id="@+id/logo"/>
	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="100sp"
		android:layout_marginStart="25sp"
		android:layout_below="@id/logo"
		android:id="@+id/first_line">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/hi"
			android:textSize="30sp"
			android:id="@+id/hi_text_view"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="12sp"
			android:text="@string/username_2"
			android:textSize="30sp"
			android:textStyle="bold"
			android:layout_toEndOf="@id/hi_text_view"
			/>
	</RelativeLayout>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="25sp"
		android:text="@string/login_successfully"
		android:textSize="30sp"
		android:layout_below="@id/first_line"
		android:id="@+id/login_successfully"/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="25sp"
		android:text="@string/welcome"
		android:textSize="30sp"
		android:layout_marginTop="125sp"
		android:layout_below="@id/login_successfully"
		/>
</RelativeLayout>