<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white">
	<ImageView
		android:layout_height="120sp"
		android:layout_width="180sp"
		android:src="@drawable/instagram_logo"
		android:layout_gravity="center"
		android:layout_marginTop="100sp"
		android:contentDescription="@string/instagram_logo" />
	<EditText
		android:layout_width="300sp"
		android:layout_height="48sp"
		android:textSize="20sp"
		android:padding="5sp"
		android:hint="@string/username"
		android:textAlignment="center"
		android:background="@drawable/rounded_corners"
		android:layout_gravity="center"
		android:layout_marginTop="50sp"
		android:autofillHints="Enter Username"
		android:inputType="text" />
	<EditText
		android:layout_width="300sp"
		android:layout_height="48sp"
		android:textSize="20sp"
		android:padding="5sp"
		android:hint="@string/password"
		android:textAlignment="center"
		android:background="@drawable/rounded_corners"
		android:layout_gravity="center"
		android:layout_marginTop="30sp"
		android:autofillHints="Enter Password"
		android:inputType="text" />
	<Button
		android:layout_width="50sp"
		android:layout_height="50sp"
		android:textSize="20sp"
		android:textColor="@color/white"
		android:text="@string/dots"
		android:textAllCaps="false"
		android:textAlignment="center"
		android:background="@drawable/button_circle"
		android:layout_gravity="center"
		android:layout_marginTop="75sp" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30sp"
		android:layout_gravity="center"
		android:text="@string/forget_password"
		android:textSize="17sp"
		/>
</LinearLayout>