<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<ImageView
		android:layout_height="120sp"
		android:layout_width="120sp"
		android:src="@drawable/instagram_logo"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="100sp"
		android:contentDescription="@string/instagram_logo"
		android:id="@+id/logo"/>
	
	<EditText
		android:id="@+id/username_field"
		android:layout_width="300sp"
		android:layout_height="48dp"
		android:layout_below="@id/logo"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50sp"
		android:autofillHints="Enter Username"
		android:background="@drawable/rounded_corners"
		android:hint="@string/username"
		android:inputType="text"
		android:padding="5sp"
		android:textAlignment="center"
		android:textSize="20sp" />
	
	<EditText
		android:id="@+id/password_field"
		android:layout_width="300sp"
		android:layout_height="48dp"
		android:layout_below="@id/username_field"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="30sp"
		android:autofillHints="Enter Password"
		android:background="@drawable/rounded_corners"
		android:hint="@string/password"
		android:inputType="textPassword"
		android:padding="5sp"
		android:textAlignment="center"
		android:textSize="20sp" />
	<Button
		android:layout_width="50sp"
		android:layout_height="50sp"
		android:textSize="20sp"
		android:text="@string/dots"
		android:textAllCaps="false"
		android:textAlignment="center"
		android:background="@drawable/button_circle"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="75sp"
		android:id="@+id/sign_in_button"
		android:layout_below="@+id/password_field"/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30sp"
		android:layout_centerHorizontal="true"
		android:text="@string/forget_password"
		android:textSize="17sp"
		android:layout_below="@id/sign_in_button"
		/>
</RelativeLayout>