<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	
	<ImageView
		android:layout_width="180sp"
		android:layout_height="120sp"
		android:contentDescription="@string/instagram_logo"
		android:src="@drawable/instagram_logo"
		android:layout_marginTop="100sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:id="@+id/instagram_logo"/>
	<EditText
		android:layout_width="300sp"
		android:layout_height="48dp"
		android:layout_gravity="center"
		android:layout_marginTop="50sp"
		android:autofillHints="Enter Username"
		android:background="@drawable/rounded_corners"
		android:hint="@string/username"
		android:inputType="text"
		android:padding="5sp"
		android:textAlignment="center"
		android:textSize="20sp"
		app:layout_constraintTop_toBottomOf="@id/instagram_logo"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:id="@id/username_field"/>
	<EditText
		android:layout_width="300sp"
		android:layout_height="48dp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="30sp"
		android:autofillHints="Enter Password"
		android:background="@drawable/rounded_corners"
		android:hint="@string/password"
		android:inputType="textPassword"
		android:padding="5sp"
		android:textAlignment="center"
		android:textSize="20sp"
		app:layout_constraintTop_toBottomOf="@id/username_field"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		android:id="@+id/password_field"/>
	<Button
		android:id="@+id/sign_in_button"
		android:layout_width="300sp"
		android:layout_height="48dp"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="75sp"
		android:background="@drawable/instagram_rounded_button"
		android:text="@string/sign_in"
		android:textAlignment="center"
		android:textAllCaps="false"
		android:textColor="@color/white"
		android:textSize="20sp"
		app:layout_constraintTop_toBottomOf="@id/password_field"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30sp"
		android:layout_centerHorizontal="true"
		android:text="@string/forget_password"
		android:textSize="17sp"
		app:layout_constraintTop_toBottomOf="@id/sign_in_button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		/>
</androidx.constraintlayout.widget.ConstraintLayout>