<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:layout_marginTop="10sp"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:baselineAligned="false"
		android:orientation="horizontal">
		<LinearLayout
			android:layout_width="0sp"
			android:layout_height="50sp"
			android:layout_weight="1"
			android:orientation="vertical"
			android:gravity="center_vertical">
			<Button
				android:layout_margin="20sp"
				android:layout_width="30sp"
				android:layout_height="30sp"
				android:background="@drawable/ic_baseline_arrow_back_24"/>
		</LinearLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="0sp"
			android:layout_height="50sp"
			android:layout_weight="1"
			android:gravity="center">
			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textSize="17sp"
				android:text="@string/details"/>
		</LinearLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="0sp"
			android:layout_height="50sp"
			android:layout_weight="1"
			android:gravity="end|center_vertical">
			<Button
				android:layout_margin="20sp"
				android:layout_width="30sp"
				android:layout_height="30sp"
				android:background="@drawable/ic_baseline_favorite_24"/>
		</LinearLayout>
	</LinearLayout>
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="300sp"
		android:layout_marginTop="20sp"
		android:src="@drawable/plant1"
		android:contentDescription="@string/plant_1" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20sp"
		android:orientation="vertical">
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:textSize="25sp"
			android:textStyle="bold"
			android:text="@string/plant_1" />
		<TextView
			android:layout_marginTop="5sp"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:textSize="15sp"
			android:text="@string/regular_price_195_00" />
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginTop="10sp"
			android:baselineAligned="false">
			<LinearLayout
				android:layout_width="0sp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="start|center_vertical">
				<Button
					android:layout_height="25sp"
					android:layout_width="25sp"
					android:background="@drawable/ic_baseline_add_box_24"/>
				<TextView
					android:layout_width="25sp"
					android:layout_height="25sp"
					android:textAlignment="center"
					android:textSize="16sp"
					android:text="@string/_1"/>
				<Button
					android:layout_height="25sp"
					android:layout_width="25sp"
					android:background="@drawable/ic_baseline_indeterminate_check_box_24"/>
			</LinearLayout>
			<LinearLayout
				android:layout_width="0sp"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:gravity="end|center_vertical">
				<Button
					android:layout_height="20sp"
					android:layout_width="20sp"
					android:background="@drawable/ic_baseline_star_rate_24"
					style="?android:attr/buttonBarButtonStyle" />
				<Button
					android:layout_height="20sp"
					android:layout_width="20sp"
					android:background="@drawable/ic_baseline_star_rate_24"
					style="?android:attr/buttonBarButtonStyle" />
				<Button
					android:layout_height="20sp"
					android:layout_width="20sp"
					android:background="@drawable/ic_baseline_star_rate_24"
					style="?android:attr/buttonBarButtonStyle" />
				<Button
					android:layout_height="20sp"
					android:layout_width="20sp"
					android:background="@drawable/ic_baseline_star_rate_24"
					style="?android:attr/buttonBarButtonStyle" />
				<Button
					android:layout_height="20sp"
					android:layout_width="20sp"
					android:background="@drawable/ic_baseline_star_rate_24"
					style="?android:attr/buttonBarButtonStyle" />
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_marginTop="5sp">
			<TextView
				android:fontFamily="sans-serif-medium"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:textSize="16sp"
				android:text="@string/description"/>
			<Button
				android:layout_gravity="center"
				android:layout_width="250sp"
				android:layout_height="50sp"
				android:layout_marginTop="25sp"
				android:background="@drawable/less_rounded_greenish_box"
				android:textAllCaps="false"
				android:textColor="@color/white"
				android:text="@string/buy_now"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>