<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<RelativeLayout
		android:layout_marginTop="10sp"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:baselineAligned="false"
		android:id="@+id/top_bar">
		<RelativeLayout
			android:layout_alignParentStart="true"
			android:layout_width="50sp"
			android:layout_height="50sp"
			android:id="@+id/back_button">
			<Button
				android:layout_centerInParent="true"
				android:layout_width="30sp"
				android:layout_height="30sp"
				android:background="@drawable/ic_baseline_arrow_back_24"/>
		</RelativeLayout>
		<RelativeLayout
			android:layout_width="60sp"
			android:layout_height="50sp"
			android:layout_centerInParent="true">
			<TextView
				android:layout_centerInParent="true"
				android:layout_height="20sp"
				android:layout_width="wrap_content"
				android:textSize="17sp"
				android:text="@string/details"/>
		</RelativeLayout>
		<RelativeLayout
			android:layout_alignParentEnd="true"
			android:layout_width="50sp"
			android:layout_height="50sp">
			<Button
				android:layout_centerInParent="true"
				android:layout_width="30sp"
				android:layout_height="30sp"
				android:background="@drawable/ic_baseline_favorite_24"/>
		</RelativeLayout>
	</RelativeLayout>
	<ImageView
		android:layout_below="@id/top_bar"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:id="@+id/product_image"
		android:layout_height="300sp"
		android:layout_marginTop="20sp"
		android:src="@drawable/plant1"
		android:contentDescription="@string/plant_1" />
	<RelativeLayout
		android:layout_below="@id/product_image"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20sp">
		<TextView
			android:id="@+id/name"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:textSize="25sp"
			android:textStyle="bold"
			android:text="@string/plant_1" />
		<TextView
			android:id="@+id/price"
			android:layout_below="@id/name"
			android:layout_marginTop="5sp"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:textSize="15sp"
			android:text="@string/regular_price_195_00" />
		<RelativeLayout
			android:id="@+id/quantity_and_rating"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10sp"
			android:baselineAligned="false"
			android:layout_below="@id/price">
			<RelativeLayout
				android:id="@+id/quantity"
				android:layout_alignParentStart="true"
				android:layout_width="75sp"
				android:layout_height="wrap_content">
				<Button
					android:layout_alignParentStart="true"
					android:layout_height="25sp"
					android:layout_width="25sp"
					android:background="@drawable/ic_baseline_add_box_24"/>
				<TextView
					android:layout_centerHorizontal="true"
					android:layout_width="25sp"
					android:layout_height="25sp"
					android:textAlignment="center"
					android:textSize="16sp"
					android:text="@string/_1"/>
				<Button
					android:layout_alignParentEnd="true"
					android:layout_height="25sp"
					android:layout_width="25sp"
					android:background="@drawable/ic_baseline_indeterminate_check_box_24"/>
			</RelativeLayout>
			<RelativeLayout
				android:layout_alignParentEnd="true"
				android:layout_width="100sp"
				android:layout_height="wrap_content">
				<Button
					android:id="@+id/star_1"
					android:layout_height="20sp"
					android:layout_width="20sp"
					android:background="@drawable/ic_baseline_star_rate_24"
					style="?android:attr/buttonBarButtonStyle" />
				<Button
					android:id="@+id/star_2"
					android:layout_toEndOf="@id/star_1"
					android:layout_height="20sp"
					android:layout_width="20sp"
					android:background="@drawable/ic_baseline_star_rate_24"
					style="?android:attr/buttonBarButtonStyle" />
				<Button
					android:id="@+id/star_3"
					android:layout_toEndOf="@id/star_2"
					android:layout_height="20sp"
					android:layout_width="20sp"
					android:background="@drawable/ic_baseline_star_rate_24"
					style="?android:attr/buttonBarButtonStyle" />
				<Button
					android:id="@+id/star_4"
					android:layout_toEndOf="@id/star_3"
					android:layout_height="20sp"
					android:layout_width="20sp"
					android:background="@drawable/ic_baseline_star_rate_24"
					style="?android:attr/buttonBarButtonStyle" />
				<Button
					android:layout_toEndOf="@id/star_4"
					android:layout_height="20sp"
					android:layout_width="20sp"
					android:background="@drawable/ic_baseline_star_rate_24"
					style="?android:attr/buttonBarButtonStyle" />
			</RelativeLayout>
		</RelativeLayout>
		<RelativeLayout
			android:layout_below="@id/quantity_and_rating"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5sp">
			<TextView
				android:id="@+id/description"
				android:fontFamily="sans-serif-medium"
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:textSize="16sp"
				android:text="@string/description"/>
			<Button
				android:layout_below="@id/description"
				android:layout_centerHorizontal="true"
				android:layout_width="250sp"
				android:layout_height="50sp"
				android:layout_marginTop="25sp"
				android:background="@drawable/less_rounded_greenish_box"
				android:textAllCaps="false"
				android:textColor="@color/white"
				android:text="@string/buy_now"/>
		</RelativeLayout>
	</RelativeLayout>
</RelativeLayout>